# TimSort

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  timsort.aux  timsort.h  timsort.latex  timsort.pyg  timsort.tgz
include/: .timsort.h.swp  adaptiveLowerBound.h  debug.h  inplaceMerge.h  itertools.h  list.h  merge.h  params.h  slowsort.h  test.h  tests.h  timsort.h  utils.h
src/: main.cpp  mainTest.cpp  stdTimSortParams.cpp  testList.cpp  tests.cpp  utils.cpp
